--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.vxe-cell {
+  width: 100% !important;
+}
+
+.error-info > .vxe-cell {
+  @apply truncate;
+}
+
+.p-content-none > .vxe-cell {
+  @apply p-0;
+  margin-right: -1px;
+  width: auto !important;
+}
+
+input.edit {
+  height: 49px;
+  margin-top: -1px;
+  margin-left: -1px;
+  margin-right: -1px;
+  @apply w-full leading-48 border-0 outline-none rounded-0 text-main px-10 border-primary border;
+
+  &:focus,
+  &:hover {
+    @apply shadow-none;
+  }
+}
+
+.vxe-table--border-line {
+  display: none;
+}
+
+.vxe-table--body-wrapper.body--wrapper {
+  top: -1px;
+}
+
+.vxe-table--render-default .vxe-body--x-space {
+  background: #e8eaec;
+  @apply mb-0;
+}
