更新 Input 只在 hover/focus 时显示蓝色边框
Signed-off-by: Lenic <Lenic@live.cn>

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -21,11 +21,11 @@ input.edit {
   margin-top: -1px;
   margin-left: -1px;
   margin-right: -1px;
-  @apply w-full leading-48 border-0 outline-none rounded-0 text-main px-10 border-primary border;
+  @apply w-full leading-48 border-0 outline-none rounded-0 text-main px-10 border;
 
   &:focus,
   &:hover {
-    @apply shadow-none;
+    @apply shadow-none border-primary;
   }
 }
 
