覆盖 VXETable 原始的边框色值
- 使用系统预置的色值覆盖

Signed-off-by: Lenic <Lenic@live.cn>

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,6 +38,11 @@ input.edit {
 }
 
 .vxe-table--render-default .vxe-body--x-space {
-  background: #e8eaec;
+  background: var(--colors-border);
   @apply mb-0;
+}
+
+.vxe-table--render-default.border--full .vxe-body--column {
+  background-image: linear-gradient(var(--colors-border), var(--colors-border)),
+    Linear-gradient(var(--colors-border), var(--colors-border));
 }
