--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,30 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-.error-info > .vxe-cell {
-  @apply truncate;
-}
-
-.p-content-none > .vxe-cell {
-  @apply p-0;
-  margin-right: -1px;
-  width: auto !important;
-}
-
-input.edit {
-  height: 49px;
-  margin-top: -1px;
-  margin-left: -1px;
-  margin-right: -1px;
-  @apply w-full leading-48 border-0 outline-none rounded-0 text-main px-10 border;
-
-  &:focus,
-  &:hover {
-    z-index: 10;
-    @apply shadow-none border-primary;
-  }
-}
-
 .vxe-table--border-line {
   display: none;
 }
@@ -42,6 +18,32 @@ input.edit {
 .vxe-table--render-default.border--full .vxe-body--column {
   background-image: linear-gradient(var(--colors-border), var(--colors-border)),
     Linear-gradient(var(--colors-border), var(--colors-border));
+}
+
+.error-info.col--edit > .vxe-cell {
+  @apply truncate;
+}
+
+.static-input.col--edit {
+  & > .vxe-cell {
+    @apply p-0;
+    margin-right: -1px;
+    width: auto !important;
+
+    & > .static-input {
+      height: 49px;
+      margin-top: -1px;
+      margin-left: -1px;
+      margin-right: -1px;
+      @apply w-full leading-48 border-0 outline-none rounded-0 text-main px-10 border;
+
+      &:focus,
+      &:hover {
+        z-index: 10;
+        @apply shadow-none border-primary;
+      }
+    }
+  }
 }
 
 .static-select {
