--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -24,23 +24,37 @@
   @apply truncate;
 }
 
-.static-input.col--edit {
-  & > .vxe-cell {
-    @apply p-0;
-    margin-right: -1px;
-    width: auto !important;
+.static-input {
+  &.col--edit.has-error:not(.col--actived) {
+    &::before {
+      right: 0;
+      top: -1px;
+      bottom: 0;
+      left: -1px;
+      content: "";
+      position: absolute;
+      @apply border border-danger bg-danger bg-opacity-10;
+    }
+  }
 
-    & > .static-input {
-      height: 49px;
-      margin-top: -1px;
-      margin-left: -1px;
+  &.col--edit {
+    & > .vxe-cell {
+      @apply p-0;
       margin-right: -1px;
-      @apply w-full leading-48 border-0 outline-none rounded-0 text-main px-10 border;
+      width: auto !important;
 
-      &:focus,
-      &:hover {
-        z-index: 10;
-        @apply shadow-none border-primary;
+      & > .static-input {
+        height: 49px;
+        margin-top: -1px;
+        margin-left: -1px;
+        margin-right: -1px;
+        @apply w-full leading-48 border-0 outline-none rounded-0 text-main px-10 border;
+
+        &:focus,
+        &:hover {
+          z-index: 10;
+          @apply shadow-none border-primary;
+        }
       }
     }
   }
