--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,18 +25,6 @@
 }
 
 .static-input {
-  &.col--edit.has-error:not(.col--actived) {
-    &::before {
-      right: 0;
-      top: -1px;
-      bottom: 0;
-      left: -1px;
-      content: "";
-      position: absolute;
-      @apply border border-danger bg-danger bg-opacity-10;
-    }
-  }
-
   &.col--edit {
     & > .vxe-cell {
       @apply p-0;
@@ -178,6 +166,23 @@
           }
         }
       }
+    }
+  }
+}
+
+.static-input,
+.static-select,
+.region-cascader {
+  &.col--edit.error-rect:not(.col--actived) {
+    &::before {
+      right: 0;
+      top: -1px;
+      bottom: 0;
+      left: -1px;
+      content: "";
+      z-index: 10;
+      position: absolute;
+      @apply border border-danger bg-danger bg-opacity-10;
     }
   }
 }
