移除下拉列表框鼠标移入时的动画效果
Signed-off-by: Lenic <Lenic@live.cn>

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -74,7 +74,7 @@
         & > .ant-select-selection {
           height: 47px;
           line-height: 47px;
-          @apply border-0 rounded-0 text-main;
+          @apply border-0 rounded-0 text-main transition-none;
 
           &:active,
           &:hover,
