添加时间选择控件的错误展示样式
Signed-off-by: Lenic <Lenic@live.cn>

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -215,7 +215,8 @@
 
 .static-input,
 .static-select,
-.region-cascader {
+.region-cascader,
+.string-date-picker {
   &.col--edit.error-rect:not(.col--actived) {
     &::before {
       right: 0;
