修复左右连续使用的情况下边框样式异常
Signed-off-by: Lenic <Lenic@live.cn>

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -122,6 +122,7 @@
 
         &:focus,
         &:hover {
+          z-index: 10;
           @apply border-primary;
 
           & > .ant-cascader-input {
@@ -184,6 +185,7 @@
 
         &:focus,
         &:hover {
+          z-index: 10;
           @apply border-primary;
         }
 
