修复第一数据行单元格顶部无法正常展示边框的问题
Signed-off-by: Lenic <Lenic@live.cn>

--- a/src/components/styles/index.css
+++ b/src/components/styles/index.css
@@ -11,8 +11,8 @@
 }
 
 .vxe-table--render-default .vxe-body--x-space {
+  margin-bottom: 0 !important;
   background: var(--colors-border);
-  @apply mb-0;
 }
 
 .vxe-table--render-default.border--full .vxe-body--column {
